@@ -175,18 +175,25 @@ extern "C" {
 #define SCM_LIST_5_P(lst) (SCM_CONSP(lst) && SCM_LIST_4_P(SCM_CDR(lst)))
 
 #define SCM_PROPER_LISTP(obj)   (SCM_LISTLEN_PROPERP(scm_length(obj)))
-#define SCM_DOTTED_LISTP(obj)   (CONSP(obj)                                  \
-                                 && SCM_LISTLEN_DOTTEDP(scm_length(obj)))
+#define SCM_DOTTED_LISTP(obj)   (SCM_LISTLEN_DOTTEDP(scm_length(obj)))
 #define SCM_CIRCULAR_LISTP(obj) (SCM_LISTLEN_CIRCULARP(scm_length(obj)))
 
 /* result decoders for scm_length() */
+/*
+ * Dotted list length follows SRFI-1 definition as follows:
+ *
+ * list            dotted length   internal encoded length(don't use directly)
+ * 'term                 0                     -1
+ * '(1 . term)           1                     -2
+ * '(1 2 . term)         2                     -3
+ * '(1 2 3 . term)       3                     -4
+ */
 #define SCM_LISTLEN_PROPERP(len)    (0 <= (len))
 #define SCM_LISTLEN_CIRCULARP(len)  ((len) == SCM_INT_T_MIN)
 #define SCM_LISTLEN_ERRORP          SCM_LISTLEN_CIRCULARP
 #define SCM_LISTLEN_DOTTEDP(len)    ((len) < 0                               \
                                      && !SCM_LISTLEN_CIRCULARP(len))
-#define SCM_LISTLEN_DOTTED(len)     (-(len))
-#define SCM_LISTLEN_BEFORE_DOT(len) (~(len))  /* -(len) - 1 */
+#define SCM_LISTLEN_DOTTED(len)     (~(len))  /* -(len) - 1 */
 
 #define SCM_EVAL(obj, env) (scm_eval((obj), (env)))
 
